--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./css/styles.css">
-   <title>Document</title>
+   <title>WebStudio</title>
 </head>
 <body>
+   <header>
+      <nav>
+         <a href="./index.html">
+            <img src="./images/WebStudio.svg" alt="studio_logo">
+         </a>
+         <ul>
+            <li>
+               <a href="#">Студия</a>
+            </li>
+            <li>
+               <a href="#">Портфолио</a>
+            </li>
+            <li>
+               <a href="#">Контакты</a>
+            </li>
+         </ul>
+         <ul>
+            <li>
+               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+               <a href="tel:+380961111111">+38096 111 11 11</a>
+            </li>
+         </ul>
+      </nav>
+   </header>
+
+   <main></main>
+   
+   <footer></footer>
    
 </body>
 </html>
