--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>WebStudio</title>
 </head>
 <body>
+   
    <header>
       <nav>
          <a href="./index.html">
@@ -34,9 +35,104 @@
       </nav>
    </header>
 
-   <main></main>
-   
-   <footer></footer>
+   <main>
+      <section>
+         <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+         <a href="#">Заказать услугу</a>
+      </section>
+      <section>
+         <!-- <h2>Преимущества</h2> -->
+         <ul>
+            <li>
+               <h3>Внимание к деталям</h3>
+               <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+               <h3>Пунктуальность</h3>
+               <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+               <h3>Планирование</h3>
+               <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+               <h3>Современные технологии</h3>
+               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li> 
+         </ul>
+      </section>
+      <section>
+         <h2>Чем мы занимаемся</h2>
+         <ul>
+            <li>
+               <img src="./images/img3.jpg" alt="coding">
+            </li>
+            <li>
+               <img src="./images/img1.jpg" alt="adapt">
+            </li>
+            <li>
+               <img src="./images/img2.jpg" alt="designing">
+            </li>
+         </ul>
+      </section>
+      <section>
+         <h2>Наша команда</h2>
+         <ul>
+            <!-- <li>
+               <img src="#" alt="photo">
+               <h3>Игорь Демьяненко</h3>
+               <p>Product Designer</p>
+            </li> -->
+            <li>
+               <figure>
+                  <img src="./images/igor.jpg" alt="photo_igor">
+                  <figcaption>Игорь Демьяненко</figcaption>
+                  <figcaption>Product Designer</figcaption>
+               </figure>
+            </li>
+            <li>
+               <figure>
+                  <img src="./images/olga.jpg" alt="photo_olga">
+                  <figcaption>Ольга Репина</figcaption>
+                  <figcaption>Frontend Developer</figcaption>
+               </figure>
+            </li>
+            <li>
+               <figure>
+                  <img src="./images/nikolai.jpg" alt="photo_nicolai">
+                  <figcaption>Николай Тарасов</figcaption>
+                  <figcaption>Marketing</figcaption>
+               </figure>
+            </li>
+            <li>
+               <figure>
+                  <img src="./images/mikhail.jpg" alt="photo_mikhail">
+                  <figcaption>Михаил Ермаков</figcaption>
+                  <figcaption>UI Designer</figcaption>
+               </figure>
+            </li>
+         </ul>
+      </section>
+   </main>
+
+   <footer>
+      <nav>
+         <a href="./index.html">
+            <img src="./images/WebStudio.svg" alt="studio_logo">
+         </a>
+         <ul>
+            <li>
+               <a href="#">г.Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li>
+               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+               <a href="tel:+380961111111">+38096 111 11 11</a>
+            </li>
+         </ul>
+      </nav>   
+   </footer>
    
 </body>
 </html>
