--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
                <a href="#">Контакты</a>
             </li>
          </ul>
-         <ul>
-            <li>
-               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-               <a href="tel:+380961111111">+38096 111 11 11</a>
-            </li>
-         </ul>
       </nav>
+      <section>
+      <ul>
+         <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+         </li>
+         <li>
+            <a href="tel:+380961111111">+38096 111 11 11</a>
+         </li>
+      </ul>
+      </section>
    </header>
 
    <main>
@@ -65,52 +67,67 @@
          <h2>Чем мы занимаемся</h2>
          <ul>
             <li>
-               <img src="./images/img3.jpg" alt="coding">
+               <img src="./images/img3.jpg" alt="coding" width="300px">
             </li>
             <li>
-               <img src="./images/img1.jpg" alt="adapt">
+               <img src="./images/img1.jpg" alt="adapt" width="300px">
             </li>
             <li>
-               <img src="./images/img2.jpg" alt="designing">
+               <img src="./images/img2.jpg" alt="designing" width="300px">
             </li>
          </ul>
       </section>
       <section>
          <h2>Наша команда</h2>
          <ul>
-            <!-- <li>
-               <img src="#" alt="photo">
+            <li>
+               <img src="./images/igor.jpg" alt="photo" width="300px">
                <h3>Игорь Демьяненко</h3>
                <p>Product Designer</p>
-            </li> -->
+            </li>
             <li>
+               <img src="./images/olga.jpg" alt="photo" width="300px">
+               <h3>Ольга Репина</h3>
+               <p>Frontend Developer</p>
+            </li>
+            <li>
+               <img src="./images/nikolai.jpg" alt="photo" width="300px">
+               <h3>Николай Тарасов</h3>
+               <p>Marketing</p>
+            </li>
+            <li>
+               <img src="./images/mikhail.jpg" alt="photo" width="300px">
+               <h3>Михаил Ермаков</h3>
+               <p>UI Designer</p>
+            </li>
+            <!-- <li>
                <figure>
-                  <img src="./images/igor.jpg" alt="photo_igor">
+                  <img src="#" alt="photo_igor">
                   <figcaption>Игорь Демьяненко</figcaption>
                   <figcaption>Product Designer</figcaption>
                </figure>
             </li>
             <li>
                <figure>
-                  <img src="./images/olga.jpg" alt="photo_olga">
+                  <img src="#" alt="photo_olga">
                   <figcaption>Ольга Репина</figcaption>
                   <figcaption>Frontend Developer</figcaption>
                </figure>
             </li>
             <li>
                <figure>
-                  <img src="./images/nikolai.jpg" alt="photo_nicolai">
+                  <img src="#" alt="photo_nicolai">
                   <figcaption>Николай Тарасов</figcaption>
                   <figcaption>Marketing</figcaption>
                </figure>
             </li>
             <li>
                <figure>
-                  <img src="./images/mikhail.jpg" alt="photo_mikhail">
+                  <img src="#" alt="photo_mikhail">
                   <figcaption>Михаил Ермаков</figcaption>
                   <figcaption>UI Designer</figcaption>
                </figure>
-            </li>
+            </li> -->
          </ul>
       </section>
    </main>
@@ -120,10 +137,10 @@
          <a href="./index.html">
             <img src="./images/WebStudio.svg" alt="studio_logo">
          </a>
+         <p>
+         <a href="#">г.Киев, пр-т Леси Украинки, 26</a>
+         </p>
          <ul>
-            <li>
-               <a href="#">г.Киев, пр-т Леси Украинки, 26</a>
-            </li>
             <li>
                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
