--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
       <nav>
          <a href="./index.html">
-            <img src="./images/WebStudio.svg" alt="studio_logo">
+            WebStudio
          </a>
          <ul>
             <li>
@@ -25,7 +25,7 @@
             </li>
          </ul>
       </nav>
-      <section>
+
       <ul>
          <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -34,7 +34,7 @@
             <a href="tel:+380961111111">+38096 111 11 11</a>
          </li>
       </ul>
-      </section>
+      
    </header>
 
    <main>
@@ -67,13 +67,13 @@
          <h2>Чем мы занимаемся</h2>
          <ul>
             <li>
-               <img src="./images/img3.jpg" alt="coding" width="300px">
+               <img src="./images/img3.jpg" alt="coding" width="370px" height:="294px">
             </li>
             <li>
-               <img src="./images/img1.jpg" alt="adapt" width="300px">
+               <img src="./images/img1.jpg" alt="adapt" width="370px" height:="294px">
             </li>
             <li>
-               <img src="./images/img2.jpg" alt="designing" width="300px">
+               <img src="./images/img2.jpg" alt="designing" width="370px" height:="294px">
             </li>
          </ul>
       </section>
@@ -81,22 +81,22 @@
          <h2>Наша команда</h2>
          <ul>
             <li>
-               <img src="./images/igor.jpg" alt="photo" width="300px">
+               <img src="./images/igor.jpg" alt="photo" width:="270px" height:="260px">
                <h3>Игорь Демьяненко</h3>
                <p>Product Designer</p>
             </li>
             <li>
-               <img src="./images/olga.jpg" alt="photo" width="300px">
+               <img src="./images/olga.jpg" alt="photo" width:="270px" height:="260px">
                <h3>Ольга Репина</h3>
                <p>Frontend Developer</p>
             </li>
             <li>
-               <img src="./images/nikolai.jpg" alt="photo" width="300px">
+               <img src="./images/nikolai.jpg" alt="photo" width:="270px" height:="260px">
                <h3>Николай Тарасов</h3>
                <p>Marketing</p>
             </li>
             <li>
-               <img src="./images/mikhail.jpg" alt="photo" width="300px">
+               <img src="./images/mikhail.jpg" alt="photo" width:="270px" height:="260px">
                <h3>Михаил Ермаков</h3>
                <p>UI Designer</p>
             </li>
@@ -135,7 +135,7 @@
    <footer>
       <nav>
          <a href="./index.html">
-            <img src="./images/WebStudio.svg" alt="studio_logo">
+            WebStudio
          </a>
          <p>
          <a href="#">г.Киев, пр-т Леси Украинки, 26</a>
